--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ p {
     padding-bottom: 20px;
 }
 .step {
-    margin-bottom: 200px;
+    margin-bottom: 350px;
     font-family: "TiemposTextWeb-Regular","Georgia";
     font-size: 16px;
     line-height: 23px;
@@ -54,21 +54,26 @@ p {
     margin-left: 0;
     font-size: 10px;
     padding-left: 20px;
+    cursor: pointer;
 }
-
 .axis path,
 .axis line {
     fill: none;
-    stroke: none;
-    shape-rendering: crispEdges;
+    stroke: #ccc;
+    stroke-width: 1px;
 }
 
 path.line {
     fill: none;
+    stroke: steelblue;
     stroke-width: 1px;
     stroke-opacity: 80%;
 }
-
+.axis text {
+    font-family: sans-serif;
+    font-size: 11px;
+    line-height: 1em;
+}
 .line.normal {
     stroke: gray;
 
@@ -84,46 +89,24 @@ path.line {
 
 }
 
-.tooltip {
-    position: absolute;
-    z-index: 10;
-    text-align: left;
-    width: 170px;
-    padding: 10px;
-    font-size: 10px;
-    font-family: Helvetica, sans-serif;
-    background: #ffffff;
-    pointer-events: none;
-    opacity: 0;
-}
-.tooltip h3 {
-    font-size: 12px; margin: 0 0 7px 0;
-    line-height: 1.2em;
-}
-div.tooltip .line { clear: both; margin-top: 3px; font-size: 11px; }
-div.tooltip .symbol { float: left; width: 6px; height: 6px; margin: 3px 4px 0 0; }
-div.tooltip .val { float: right; width: 25px; text-align: center; margin-right: 4px; background: none; }
-
-
 .overlay {
     fill: none;
     pointer-events: all;
 }
 
-.button {
-    fill: #000;
-}
-
-.scalebutton {
-    cursor: pointer;
-}
-.countries {
+.countries{
     stroke: #fff;
     stroke-linejoin: round;
 }
-.countries path.selected {
-    stroke: #000;
-    stroke-width: 0.5px;
+.subhead {
+    margin-top: 10px;
 }
-
-.clr { clear: both; }
+.col-md-6{
+    position: absolute;
+    background-color:white;
+    z-index: 1000;
+}
+p {
+    font-size: 14px;
+    margin: 10px 0 0 0;
+}
