--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@ p {
     line-height: 1.2em;
 }
 #extra-space {
-    height: 300px;
+    height: 600px;
 }
 #page_header {
     position: relative;
@@ -56,7 +56,7 @@ p {
     padding-left: 20px;
     cursor: pointer;
 }
-#lineForThree {
+#lineForThree,#scatter,#area {
     display: none;
     position: fixed;
     float: right;
@@ -66,15 +66,12 @@ p {
     font-size: 10px;
     padding-left: 20px;
 }
-#scatter{
-    display: none;
-    position: fixed;
-    float: right;
-    top: 60px;
-    z-index: 1;
-    margin-left: 0;
-    font-size: 10px;
-    padding-left: 20px;
+.tooltipForArea{
+    position: absolute;
+    font-family: sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    z-index: 1000;
 }
 .axis path,
 .axis line {
@@ -173,4 +170,10 @@ p {
 }
 text{
     font-size: 15px;
+}
+.special{
+    cursor: pointer;
+}
+#ending{
+    text-align: center;
 }
