--- a/main.css
+++ b/main.css
@@ -1,10 +1,19 @@
 /*For general setting*/
 body {
+    font-family: Helvetica, arial, freesans, clean, sans-serif;
     width: 1200px;
     margin: auto;
+    background-color: #ffffff;
 }
-p {
-    padding: 20px;
+.bottomstroke {border-bottom:1px solid #e5e4e1;}
+h1{
+    color: #1cabe2;
+}
+h3{
+    color: #f6911d;
+}
+h5,p,h2{
+    color: #767678;
 }
 .container {
     width: 890px;
@@ -23,17 +32,15 @@ p {
 }
 .step {
     margin-bottom: 350px;
-    font-family: "TiemposTextWeb-Regular","Georgia";
     font-size: 16px;
     line-height: 23px;
     color: #767678;
 }
 #sections .title {
-    font-family: Arial,Helvetica,"san-serif";
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 2px;
-    color: #262626;
+    color: #f6911d;
     line-height: 1.2em;
 }
 #extra-space {
@@ -41,7 +48,7 @@ p {
 }
 #page_header {
     position: relative;
-    margin: 20px;
+    margin: 30px;
     z-index: 2;
     width: 600px;
 }
@@ -68,7 +75,6 @@ p {
 }
 .tooltipForArea{
     position: absolute;
-    font-family: sans-serif;
     font-size: 12px;
     font-weight: bold;
     z-index: 1000;
@@ -87,7 +93,6 @@ path.line {
     stroke-opacity: 80%;
 }
 .axis text {
-    font-family: sans-serif;
     font-size: 11px;
     line-height: 1em;
 }
@@ -150,7 +155,6 @@ p {
 }
 .toolTipForThree{
     position: absolute;
-    font-family: sans-serif;
     font-size: 12px;
     font-weight: bold;
     z-index: 10;
