--- a/main.css
+++ b/main.css
@@ -60,7 +60,7 @@ h5,p,h2{
     z-index: 1;
     margin-left: 0;
     font-size: 10px;
-    padding-left: 20px;
+    padding-left: 40px;
     cursor: pointer;
 }
 #lineForThree,#scatter,#area {
@@ -71,12 +71,11 @@ h5,p,h2{
     z-index: 1;
     margin-left: 0;
     font-size: 10px;
-    padding-left: 20px;
+    padding-left: 40px;
 }
 .tooltipForArea{
     position: absolute;
     font-size: 12px;
-    font-weight: bold;
     z-index: 1000;
 }
 .axis path,
@@ -156,9 +155,7 @@ p {
 .toolTipForThree{
     position: absolute;
     font-size: 12px;
-    font-weight: bold;
     z-index: 10;
-    background: rgba(211,211,211,0.7);
 }
 #Series1s,#Series2s,#Series3s{
     cursor: pointer;
@@ -172,6 +169,16 @@ p {
     border: gray 1px solid;
     padding: 2px;
 }
+.tooltipForArea p {
+    background-color: white;
+    border: gray 1px solid;
+    padding: 2px;
+}
+.toolTipForThree p {
+    background-color: white;
+    border: gray 1px solid;
+    padding: 2px;
+}
 text{
     font-size: 15px;
 }
@@ -180,4 +187,7 @@ text{
 }
 #ending{
     text-align: center;
+}
+.author{
+    text-align: end;
 }
